[package]
name = "INPAParser"
version = "0.1.0"
authors = ["Ashcon Mohseninia <ashconm@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "inpa_parser"
path = "src/main.rs"

[lib]
name = "inpa_parser"
path = "src/lib.rs"

[dependencies]
serde_json = "1.0"
common = { path = "../common" }