[package]
name = "ovd"
version = "0.1.0"
edition = "2018"


[dependencies.gtk]
version = "0.9.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]


[dependencies]
serde_json = "1.0"
libloading = "0.6.4"
libc = "0.2.79"
J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}

[target.'cfg(windows)'.dependencies]
winreg = "0.7"