[package]
name = "openvehiclediag"
version = "0.5.0"
description = "pen Vehicle Diagnostics (OVD) is a Rust-based open source vehicle ECU diagnostic platform."
[package.metadata.bundle]
version = "0.5.0"
authors = ["ashcon"]
edition = "2018"
description = """
Open Vehicle Diagnostics (OVD) is a Rust-based open source vehicle ECU diagnostic platform that makes use of the J2534-2 protocol.

The idea is to make diagnosing and exploring your cars diagnostics functions possible, via an API, thus allowing the ability for you to reprogram ECU’s without the need for a special dealer-only tool.
"""


[dependencies]
iced = { version = "0.2.0", features = ["tokio", "image", "canvas"] }

serde_json = "1.0"
libloading = "0.6.4"
libc = "0.2.79"
serde_derive = "1.0.80"
lazy_static="1.4.0"
serde = {version = "1.0.80", features = ["derive"]}
common = { path = "../common" }
J2534Common = { path = "../MacchinaM2-J2534-Rust/J2534Common/"}
bitfield = "0.13.2"
nfd = "0.0.4"
hex-serde = "0.1.0"
chrono = "0.4.19"
hex = "0.4.2"
image = "0.23.12"

[target.'cfg(windows)'.dependencies]
winreg = "0.7"

[target.'cfg(unix)'.dependencies]
shellexpand = "2.0.0"
