[package]
name = "openvehiclediag"
version = "1.0.5"
description = "pen Vehicle Diagnostics (OVD) is a Rust-based open source vehicle ECU diagnostic platform."
edition = "2018"

[package.metadata.bundle]
version = "0.6.0"
authors = ["ashcon"]
edition = "2018"
description = """
Open Vehicle Diagnostics (OVD) is a Rust-based open source vehicle ECU diagnostic platform that makes use of the J2534-2 protocol.

The idea is to make diagnosing and exploring your cars diagnostics functions possible, via an API, thus allowing the ability for you to reprogram ECU’s without the need for a special dealer-only tool.
"""


[dependencies]
serde_json = "1.0"
serde_derive = "1.0.80"
serde = {version = "1.0.80", features = ["derive"]}
common = { path = "../common" }
bitfield = "0.13.2"
nfd = "0.0.4"
hex-serde = "0.1.0"
chrono = "0.4.19"
image = "0.23.12"
dialog = "0.3.0"
backtrace = "0.3.59"
#ecu_diagnostics="0.8.2"
ecu_diagnostics = {git="https://github.com/rnd-ash/ecu_diagnostics"}
#ecu_diagnostics = {path="../../ecu_diagnostics"}
eframe = { version = "*", default-features = false, features = ["default_fonts", "egui_glow"] }
egui="0.15.0"
env_logger="*"
